fix footer spacing

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -152,6 +152,13 @@ footer {
     th {
       text-align: left;
     }
+
+    th {
+      font-size: 16px;
+      a {
+        font-size: 16px;
+      }
+    }
   }
 
   .row {
